added strings to language file

--- a/lang/en_EN.json
+++ b/lang/en_EN.json
@@ -1,4 +1,38 @@
 {
-    "command_ping_ping": "📤 Ping...",
-    "command_ping_pong": "📥 Pong! \nLatency is {{msgLatency}}ms. \nAPI Latency is {{apiLatency}}ms"
+    "log_global_error_title": "ERROR: ",
+    "chat_global_error_unkown": "Oh no! Something went wrong. This error has been carefully recorded and our nerd is working on it to fix it. Please try again later.",
+    "log_event_ready_loggedInUser": "[{{functionName}}] Logged in as {{userName}}!",
+    "chat_command_about_desc": "Displays some information about the bot.",
+    "chat_command_about_embed_title": "About: ",
+    "chat_command_avatar_desc": "Retrieves the profile picture of the provided user ID.",
+    "chat_command_avatar_err_noUser": "Sorry, but there is no user on this server with the information provided.",
+    "chat_command_eval_desc": "Command used to run snippets of code. [ADMINISTRATOR ONLY]",
+    "chat_command_eval_err_codeFail": "`ERROR` ```xl\n{{err}}\n```",
+    "chat_command_help_embed_title": "Halp",
+    "chat_command_help_embed_desc": "For additional Info, please ask `Phil | Flipper#3621`",
+    "chat_command_help_embed_field_title": "`{{prefix}}help`",
+    "chat_command_help_embed_field_desc": "Shows this list of commands.",
+    "chat_command_help_desc": "Displays the help of usable commands for the corrent user.",
+    "chat_command_lookup_desc": "Uses the Discord API to lookup userinformaiton.",
+    "chat_command_lookup_error_missingID": "Please provide an ID!",
+    "chat_command_lookup_error_noUserException": "This user doesn't exist.",
+    "chat_command_lookup_error_unkownException_message": "An error occurred!",
+    "chat_command_lookup_error_unkownException_stopCode": "Stopcode:",
+    "chat_command_lookup_embed_field_userTag": "Usertag",
+    "chat_command_lookup_embed_field_userID": "ID",
+    "chat_command_lookup_embed_field_userCreationDate": "Account Creation Date",
+    "chat_command_ping_desc": "Shows API and bot latencies.",
+    "chat_command_ping_ping": "📤 Ping...",
+    "chat_command_ping_pong": "📥 Pong! \nLatency is {{msgLatency}}ms. \nAPI Latency is {{apiLatency}}ms",
+    "chat_command_serverinfo_desc": "Displays serverinfo from the provided server ID.",
+    "chat_command_serverinfo_embed_acronym": "Acronym",
+    "chat_command_serverinfo_embed_name": "Name",
+    "chat_command_serverinfo_embed_owner": "Owner",
+    "chat_command_serverinfo_embed_ID": "ID",
+    "chat_command_serverinfo_embed_channels": "Channels",
+    "chat_command_serverinfo_embed_emojis": "Emojis",
+    "chat_command_serverinfo_embed_membercount": "Membercount",
+    "chat_command_serverinfo_embed_verificationLevel": "Verification level",
+    "chat_command_serverinfo_embed_contentFilter": "Content filter",
+    "chat_command_serverinfo_embed_vcRegion": "VC Region"
 }
