--- a/lang/en_EN.json
+++ b/lang/en_EN.json
@@ -22,8 +22,8 @@
     "chat_command_lookup_embed_field_userID": "ID",
     "chat_command_lookup_embed_field_userCreationDate": "Account Creation Date",
     "chat_command_ping_desc": "Shows API and bot latencies.",
-    "chat_command_ping_ping": "📤 Ping...",
-    "chat_command_ping_pong": "📥 Pong! \nLatency is {{msgLatency}}ms. \nAPI Latency is {{apiLatency}}ms",
+    "chat_command_ping_embed_ping": "📤 Ping...",
+    "chat_command_ping_embed_pong": "📥 Pong! \nLatency is {{msgLatency}}ms. \nAPI Latency is {{apiLatency}}ms",
     "chat_command_serverinfo_desc": "Displays serverinfo from the provided server ID.",
     "chat_command_serverinfo_embed_acronym": "Acronym",
     "chat_command_serverinfo_embed_name": "Name",
