added entrys for offline stats + rolerequest

--- a/lang/en_EN.json
+++ b/lang/en_EN.json
@@ -34,5 +34,30 @@
     "chat_command_serverinfo_embed_membercount": "Membercount",
     "chat_command_serverinfo_embed_verificationLevel": "Verification level",
     "chat_command_serverinfo_embed_contentFilter": "Content filter",
-    "chat_command_serverinfo_embed_vcRegion": "VC Region"
+    "chat_command_serverinfo_embed_vcRegion": "VC Region",
+    "log_function_SETUP_offlineStat_postingStatusMessage": "[{{functionName}}] Posting bot status message!",
+    "log_function_SETUP_offlineStat_warn_debugMode": "[{{functionName}}] Bot is in debugging-mode and will not post bot status message or update the DB entry.",
+    "chat_function_SETUP_offlineStat_embed_title": "Bot back online!",
+    "chat_function_SETUP_offlineStat_embed_field_title_botOfflineWhen": "The time the bot went offline:",
+    "chat_function_SETUP_offlineStat_embed_field_title_botOfflineAt": "The bot went offline at:",
+    "chat_function_SETUP_offlineStat_warn_noDBEntry_embed_desc": "The time that the bot was offline, is missing. A new entry got created!",
+    "log_function_SETUP_roleRequest_postingStatusMessage": "[{{functionName}}] Posting rolerequest message!",
+    "log_function_SETUP_roleRequest_warn_channelMissing": "[{{functionName}}] The channel with the ID {{channelID}} doesn't exist and is going to be skipped!",
+    "chat_function_SETUP_roleRequest_embed_title": "Rolerequest",
+    "chat_function_SETUP_roleRequest_embed_desc": "Click on the reactions to get the roles!\nPlease read <#{{channelID}}> for a more details about the roles!",
+    "chat_function_SETUP_roleRequest_embed_field_title_prey": "Prey",
+    "chat_function_SETUP_roleRequest_embed_field_desc_prey": "🦌",
+    "chat_function_SETUP_roleRequest_embed_field_title_switch": "Prey/Pred",
+    "chat_function_SETUP_roleRequest_embed_field_desc_switch": "🔄",
+    "chat_function_SETUP_roleRequest_embed_field_title_pred": "Pred",
+    "chat_function_SETUP_roleRequest_embed_field_desc_pred": "🐉",
+    "chat_function_SETUP_roleRequest_embed_field_title_nsfwAccess": "NSFW Access",
+    "chat_function_SETUP_roleRequest_embed_field_desc_nsfwAccess": "🔞",
+    "chat_function_SETUP_roleRequest_embed_field_title_nsflAccess": "NSFL Access",
+    "chat_function_SETUP_roleRequest_embed_field_desc_nsflAccess": "💩",
+    "chat_function_SETUP_roleRequest_reaction_prey": "🦌",
+    "chat_function_SETUP_roleRequest_reaction_switch": "🔄",
+    "chat_function_SETUP_roleRequest_reaction_pred": "🐉",
+    "chat_function_SETUP_roleRequest_reaction_nsfwAcess": "🔞",
+    "chat_function_SETUP_roleRequest_reaction_nsflAccess": "💩"
 }
